fix: conf panel and slider size on small screen

--- a/src/components/RangeSlider/RangeSlider/RangeSlider.scss
+++ b/src/components/RangeSlider/RangeSlider/RangeSlider.scss
@@ -8,7 +8,6 @@
   display: flex;
   flex-direction: column;
   width: 100%;
-  height: 100%;
 
   &_vertical {
     width: 7px;
