--- a/src/components/site-pages/index/demo.scss
+++ b/src/components/site-pages/index/demo.scss
@@ -15,28 +15,9 @@ body {
   }
 }
 
-.slider-1 {
-  width: 100%;
-  height: 250px;
-}
-
-.slider-2 {
-  width: 100%;
-  height: 300px;
-}
-
-.slider-3 {
-  width: 100%;
-}
-
-#range-slider3 {
-  height: 200px;
-}
-
+.slider-1,
+.slider-2,
+.slider-3,
 .slider-4 {
   width: 100%;
-}
-
-#range-slider4 {
-  height: 350px;
 }
